# moblie_manipulator_tutorial

robot_bringup/config/: frbot_controllers.yaml  frbot_controllers_sim.yaml
robot_config/: CMakeLists.txt  README.md  package.xml
robot_config/config/: ekf.yaml  frbot_controllers.yaml  frbot_controllers_sim.yaml  gz_ros_bridge.yaml  imu_config.yaml  realsense_config.yaml  velodyne_config.yaml
robot_description/: CMakeLists.txt  package.xml
robot_description/launch/: mobile_manipulator.launch.py
robot_description/meshes/: actuator3.stl  forearm_link.stl  upperarm_link.stl
robot_description/urdf/: front_left_wheel.xacro  front_right_wheel.xacro  material.xacro  mobile_manipulator.xacro  rear_left_wheel.xacro  rear_right_wheel.xacro  robot_base.urdf.xacro  robot_core.xacro  ros2_control.urdf.xacro  ros2_control_sim.urdf.xacro
robot_gazebo/: package.xml
robot_gazebo/launch/: frbot_gz_sim.launch.py  frbot_gz_sim_local.launch.py
robot_gazebo/worlds/: empty_worlds.sdf
